'Get books' and 'add book' routes, add 'genre' col
